--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,15 @@ main {
     justify-content: center;
     align-items: center;
 }
+input[type="button"]{
+    font-size: 24px;
+    margin: 16px;
+    padding: 4px 32px;
+}
 
 .grid-container {
+    display: none;
     width: 480px;
     height: 480px;
+    border: 5px groove blue;
 }
