--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,89 @@
+body {
+    background-color: rgb(200, 200, 200);
+}
+
+h1 {
+    text-decoration: underline black double;
+    padding-left: 24px;
+
+}
+
 main {
     display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: flex-start;
+    gap: 26px;
+    border: 3px dotted red;
+}
+
+form{
+    width: 172px;
+    position: fixed;
+    top: 85px;
+    left: -144px;
+    transition-property: left;
+    transition-duration: 0.25s;
+    transition-timing-function: ease-out;
+
+    display: flex;
     flex-direction: column;
+    justify-content: start;
+    align-items: flex-end;
+    gap: 24px;
+
+    border: 2px solid green;
+
+}
+form:hover{
+    left: 0px;
+}
+
+h2{
+    font-size: 16px;
+    margin: 0px;
+
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-input[type="button"]{
-    font-size: 24px;
-    margin: 16px;
-    padding: 4px 32px;
+
+label{
+    font-size: 16px;
+
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    border: 2px solid pink;
+}
+
+.grid,.color,.shade{
+    width: 136px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: stretch;
+    gap: 8px;
+
+    border: 2px solid red;
+
+}
+
+#size{
+    font-size: 16px;
+    width: 56px;
 }
 
 .grid-container {
-    display: none;
     width: 480px;
     height: 480px;
-    border: 5px groove blue;
+    margin-left: 180px;
+
+    display: none;
+    border: 3px double black;
+
+}
+.cell{
+    filter: brightness(100%);
 }
